fix: nav nowrap

--- a/public/globals.css
+++ b/public/globals.css
@@ -87,6 +87,8 @@
 nav {
   margin-bottom: 2rem;
   padding-top: 2rem;
+  white-space: nowrap;
+  overflow-x: auto;
 }
 
 nav a {
@@ -489,5 +491,7 @@ pre > code {
 @media screen and (max-width: 768px) {
   .footer > p {
     font-size: 1.25rem !important;
+  white-space: nowrap;
+  overflow-x: auto;
   }
 }
